BE - Activities - create
