# backend/src/controllers/activities.js
@@ -1,0 +1,9 @@
+const Activity = require('../models/Activity');
+
+module.exports = {
+    createActivity
+};
+
+function createActivity(name, description, photoUrl) {
+    return Activity.create({ name, description, photoUrl });
+}
