# backend/src/routes/index.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
 
 router.use('/users', require('./users'));
+router.use('/activities', require('./activities'));
 
 module.exports = router;
